# dbcstudio

./: .gitignore  README.md  pyproject.toml  start_dbcstudio.sh
docs/: architecture.md  development.md  getting-started.md  roadmap.md  user-guide.md
src/dbcstudio/: __init__.py  __main__.py  dbc_io.py  main_window.py  model.py  style.py  widgets.py
tests/: test_dbc_io.py
