[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "dbcstudio"
version = "0.1.0"
description = "Modern DBC editor and visualizer for CAN databases"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "dbcstudio contributors" }
]
license = { text = "MIT" }
keywords = ["can", "dbc", "editor", "qt", "visualization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
]
dependencies = [
  "PySide6>=6.5",
  "cantools>=39.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
dbc-studio = "dbcstudio.__main__:main"
dbcstudio = "dbcstudio.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dbcstudio"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
